[package]
name = "certain"
version = "1.0.0"
authors = ["André Storfjord Kristiansen"]
description = "Certificate transparency log streamer."
repository = "https://github.com/dev-bio/certain"
homepage = "https://github.com/dev-bio/certain"
readme = "README.md"
license = "MIT"
edition = "2021"

keywords = [
    "certificate",
    "rfc6962",
    "stream",
    "x509",
    "log",
]

exclude = [
    ".gitattributes",
    ".gitignore",
    ".git",
    
    ".vscode/**",
    ".github/**", 
    ".cargo/**",

    "media/**",
]

[dependencies]
certain-certificate = { version = "0.1.0" }
serde_json = { version = "1.0.87" }
thiserror = { version = "1.0.37" }
byteorder = { version = "1.4.3" }
num_cpus = { version = "1.13.1" }
reqwest = { version = "0.11.12", features = ["blocking"] }
futures = { version = "0.3.25" }
chrono = { version = "0.4.22", features = ["serde"] }
base64 = { version = "0.21.0" }
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.25.0", features = ["time"] }
url = "2.3.1"
